CHORE: scss+classnaems 설정추가, variable color 추가

--- a/packages/ts-config/package.json
+++ b/packages/ts-config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/ts-config",
+  "name": "@packages/ts-config",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
