--- a/apps/awaji-app/package.json
+++ b/apps/awaji-app/package.json
@@ -9,18 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
+    "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "sass": "^1.77.6"
   },
   "devDependencies": {
-    "@repo/ui": "workspace:*",
-    "@repo/eslint": "workspace:*",
-    "typescript": "^5",
+    "@packages/eslint": "workspace:*",
+    "@packages/ui": "workspace:*",
+    "@packages/styles": "workspace:*",
+    "@packages/ts-config": "workspace:*",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "eslint-config-next": "14.2.4",
+    "typescript": "^5"
   }
 }
