--- a/apps/awaji-app/tsconfig.json
+++ b/apps/awaji-app/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "@packages/ts-config/next.js",
   "compilerOptions": {
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
