--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@repo/ts-config/library.json",
+  "extends": "@packages/ts-config/library.json",
   "compilerOptions": {
     "outDir": "dist"
   },
