--- a/apps/awaji-app/package.json
+++ b/apps/awaji-app/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.48.0",
     "@tanstack/react-query-devtools": "^5.48.0",
     "classnames": "^2.5.1",
+    "firebase": "^10.12.2",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
