--- a/apps/awaji-app/package.json
+++ b/apps/awaji-app/package.json
@@ -11,6 +11,8 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.48.0",
+    "@tanstack/react-query-devtools": "^5.48.0",
     "classnames": "^2.5.1",
     "next": "14.2.4",
     "react": "^18",
@@ -31,6 +33,7 @@
     "@storybook/nextjs": "^8.1.11",
     "@storybook/react": "^8.1.11",
     "@storybook/test": "^8.1.11",
+    "@packages/prettier": "workspace:*",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -39,5 +42,6 @@
     "eslint-plugin-storybook": "^0.8.0",
     "storybook": "^8.1.11",
     "typescript": "^5"
-  }
+  },
+  "prettier": "@packages/prettier"
 }
